@@ -71,6 +71,8 @@
         }, function(){
           $('.panel').stop().animate({height: '2.4em'}, 1000);
         });
+        // Set focus on page load
+        $("#username").focus();
       });
     /*]]>*/</script>
   </head>
